--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "type": "module",
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "prismjs": "^1.29.0"
   }
 }
