--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sveltejs/enhanced-img": "^0.3.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "svelte-device-info": "^1.0.5"
   }
 }
